<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/newuser"
        android:textSize="15dp"
        android:textColor="@color/Black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="center_horizontal"
        />


    <EditText
        android:id="@+id/user_name"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"

        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_gravity="center_horizontal"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create"
        android:id="@+id/create_account_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/message" />

</LinearLayout>